<resources>
    <string name="app_name">Alpaca Dashboard</string>
    <string name="scrub_format">%1$s</string>
    <string name="randomize">Randomize</string>
    <string name="Reset">Reset</string>
    <string name="title_activity_stock_page">StockPage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="loading">Loading...</string>
    <string name="shortcut_order">Place an order</string>
    <string name="open_dashboard">Open Dashboard</string>

    <string name="indication_arrow">Indication Arrow</string>
    <string name="orders">Orders</string>
    <string name="positions">Positions</string>
    <string name="alpaca_dashboard">Alpaca Dashboard</string>
    <string name="places_orders">Places Orders</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="order">Order</string>
    <string name="speak">Speak</string>
    <string name="emergency">Emergency</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="liquidate_all_positions">Liquidate All Positions</string>
    <string name="cancel_all_orders">Cancel All Orders</string>
    <string name="portfolio_value">Portfolio Value</string>
    <string name="trading_since">Trading Since</string>
    <string name="buying_power">Buying Power</string>
    <string name="cash">Cash</string>
    <string name="profile">Profile</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="description">Dashboard for all things Alpaca!</string>
    <string name="log_out">Log Out</string>
    <string name="statistics">Statistics</string>
    <string name="dividend_yield">Dividend Yield</string>
    <string name="assets">Assets</string>
    <string name="debt">Debt</string>
    <string name="debt_to_equity_ratio">Debt to Equity Ratio</string>
    <string name="gross_profit">Gross Profit</string>
    <string name="earnings_per_share">Earnings Per Share</string>
    <string name="gross_margin">Gross Margin</string>
    <string name="market_cap">Market Cap</string>
    <string name="net_cash_flow">Net Cash Flow</string>
    <string name="price_to_earnings_ratio">Price to Earnings Ratio</string>
    <string name="price_to_earnings">Price to Earnings</string>
    <string name="revenues">Revenues</string>
    <string name="zero_shares">0 shares owned</string>
    <string name="buy_premium">Buy Premium</string>
    <string name="watchlist">Watchlist</string>
    <string name="total_percent_change">Total Percent Change</string>
    <string name="total_return">Total Return</string>
    <string name="percent_change">Percent Change</string>
    <string name="start_investing">Start Investing</string>
    <string name="alpaca_dashboard">Alpaca Dashboard</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
</resources>