<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="20dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin">

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@drawable/information"
            android:padding="10dp"
            android:paddingEnd="10dp"
            android:id="@+id/settingsGear"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:backgroundTint="?attr/colorPrimary"
            android:stateListAnimator="@null"
            android:layout_centerVertical="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            app:tint="?attr/colorPrimaryLight"
            tools:ignore="RtlSymmetry"
            android:focusable="true" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profileLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="sans-serif-medium"
            android:textColor="?attr/colorLight"
            android:text="@string/profile"
            android:textSize="35sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/legend"
            app:layout_constraintTop_toBottomOf="@id/profileLabel"
            android:layout_marginStart="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/portValProfile"
            android:layout_marginTop="20dp"
            android:text="@string/loading"
            android:textSize="20sp"
            android:textColor="?attr/colorLight"/>

        <LinearLayout
            android:id="@+id/topLayout"
            android:orientation="horizontal"
            android:layout_below="@id/portValProfile"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/labelPortfolio"
                android:text="@string/portfolio_value"
                android:layout_marginEnd="5dp"
                android:textSize="12sp"
                android:textColor="?attr/colorPrimaryLight"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                app:tint="?attr/color_positive"
                android:tint="?attr/color_positive"
                android:layout_marginTop="1dp"
                android:src="@drawable/circle"
                android:layout_gravity="center_vertical"
                android:tintMode="add"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/topLayout"
            android:layout_marginTop="20dp"
            android:id="@+id/cashValProfile"
            android:text="@string/loading"
            android:textSize="20sp"
            android:textColor="?attr/colorLight"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cashValProfile"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cashValLabel"
                android:layout_marginEnd="5dp"
                android:text="@string/cash"
                android:textSize="12sp"
                android:textColor="?attr/colorPrimaryLight"/>

                <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginTop="1dp"
                android:layout_gravity="center_vertical"
                android:tint="?attr/color_negative"
                android:src="@drawable/circle"
                android:tintMode="add"/>

        </LinearLayout>

        </RelativeLayout>

        <com.github.mikephil.charting.charts.PieChart
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="40dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/legend"
            app:layout_constrainedWidth="true"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/pieChart"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pieChart"
            android:layout_marginTop="20dp"
            android:id="@+id/buyingPower"
            app:layout_constraintTop_toBottomOf="@id/pieChart"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/loading"
            android:textSize="20sp"
            android:textColor="?attr/colorLight"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buyingPowerLabel"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_below="@id/buyingPower"
            app:layout_constraintTop_toBottomOf="@id/buyingPower"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/buying_power"
            android:textSize="12sp"
            android:textColor="?attr/colorPrimaryLight"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buyingPowerLabel"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/buyingPowerLabel"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/tradingSince"
            android:text="@string/loading"
            android:textSize="20sp"
            android:textColor="?attr/colorLight"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tradingSinceLabel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tradingSince"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_below="@id/tradingSince"
            android:text="@string/trading_since"
            android:textSize="12sp"
            android:textColor="?attr/colorPrimaryLight"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buy_premium"
            android:clickable="true"
            android:focusable="true"
            android:textColor="?attr/color_positive"
            android:layout_below="@id/tradingSinceLabel"
            app:layout_constraintTop_toBottomOf="@id/tradingSinceLabel"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="40dp"
            app:cornerRadius="15dp"
            android:text="Buy Premium"
            android:stateListAnimator="@null"
            android:backgroundTint="?attr/color_positive_light"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logout"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/colorPrimary"
            android:layout_below="@id/tradingSinceLabel"
            app:layout_constraintTop_toBottomOf="@id/buy_premium"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            app:cornerRadius="15dp"
            android:text="@string/log_out"
            android:stateListAnimator="@null"
            android:backgroundTint="@color/yellow"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>