<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout android:id="@+id/refreshStock"
    app:swipeRefreshLayoutProgressSpinnerBackgroundColor="?attr/color_positive"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="?attr/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="?attr/color_positive"
        android:id="@+id/placeOrder"
        android:src="@drawable/plus"
        android:elevation="2dp"
        app:borderWidth="0dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_above="@id/fabCard"
        android:layout_marginBottom="-30dp"
        app:fab_stroke_visible="false"
        app:tint="?attr/colorPrimary"
        android:contentDescription="@string/places_orders" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/numberOfStocks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorPrimarySlightLight"
        android:text="@string/loading"
        android:elevation="3dp"
        android:layout_marginStart="20dp"
        android:textSize="10sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"/>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="2dp"
        android:id="@+id/fabCard"
        android:layout_gravity="bottom"
        android:backgroundTint="?attr/colorPrimary"
        android:layout_alignParentBottom="true">

        <View
            android:layout_width="wrap_content"
            android:layout_height="4dp"
            android:background="@drawable/shadow"/>

    </com.google.android.material.card.MaterialCardView>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollIDStock"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="1dp"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/percentChangeStock"
                            android:text="@string/loading"
                            android:textSize="10sp"
                            android:clickable="false"
                            android:gravity="center"
                            android:layout_centerInParent="true"
                            app:cornerRadius="15dp"
                            android:layout_alignParentEnd="true"
                            android:stateListAnimator="@null"
                            app:iconSize="3dp"
                            app:iconGravity="textEnd"
                            android:elevation="0dp"
                            app:iconTint="?attr/color_positive"
                            android:textColor="?attr/color_positive"
                            style="@style/Widget.MaterialComponents.Button.Icon"
                            android:backgroundTint="?attr/color_positive_light"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/stockTradedStock"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="10dp"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="?attr/colorLight"
                            android:textSize="35sp" />

                    </RelativeLayout>

                    <com.robinhood.ticker.TickerView
                        android:id="@+id/tickerViewStock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:textColor="?attr/colorLight"
                        android:textSize="30sp" />

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/sparkCardStock"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:backgroundTint="?attr/colorPrimary"
                        android:clipChildren="true"
                        android:elevation="0dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="0dp"
                        app:strokeWidth="1dp"
                        app:strokeColor="?attr/colorAccentTransparent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:cardPreventCornerOverlap="false">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintHeight_percent=".5"
                            app:layout_constraintVertical_weight="1"
                            android:orientation="vertical">

                            <com.robinhood.spark.SparkView
                                android:id="@+id/sparkviewStock"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="9"
                                android:elevation="3dp"
                                android:paddingTop="20dp"
                                android:paddingEnd="20dp"
                                android:paddingBottom="20dp"
                                app:layout_constrainedHeight="true"
                                app:layout_constraintBottom_toTopOf="@id/historical"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constrainedWidth="false"
                                app:layout_constraintHeight_percent=".915"
                                app:layout_constraintTop_toTopOf="parent"
                                app:spark_lineColor="?attr/color_negative"
                                app:spark_scrubEnabled="true"
                                tools:ignore="RtlSymmetry" />

                            <LinearLayout
                                android:id="@+id/historicalStock"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:paddingBottom="5dp">

                                <com.google.android.material.button.MaterialButton
                                    android:id="@+id/oneDayStock"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:backgroundTint="?attr/color_positive_light"
                                    android:gravity="center"
                                    android:stateListAnimator="@null"
                                    android:text="1D"
                                    android:textColor="?attr/color_positive"
                                    android:textSize="10sp"
                                    app:cornerRadius="15dp"
                                    app:layout_gravity="fill_horizontal"
                                    app:rippleColor="?attr/color_positive" />

                                <com.google.android.material.button.MaterialButton
                                    android:id="@+id/oneWeekStock"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:backgroundTint="?attr/colorPrimary"
                                    android:gravity="center"
                                    android:stateListAnimator="@null"
                                    android:text="1W"
                                    android:textColor="?attr/color_positive"
                                    android:textSize="10sp"
                                    app:cornerRadius="15dp"
                                    app:layout_gravity="fill_horizontal"
                                    app:rippleColor="?attr/color_positive" />

                                <com.google.android.material.button.MaterialButton
                                    android:id="@+id/oneMonthStock"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:backgroundTint="?attr/colorPrimary"
                                    android:gravity="center"
                                    android:stateListAnimator="@null"
                                    android:text="1M"
                                    android:textColor="?attr/color_positive"
                                    android:textSize="10sp"
                                    app:cornerRadius="15dp"
                                    app:layout_gravity="fill_horizontal"
                                    app:rippleColor="?attr/color_positive" />

                                <com.google.android.material.button.MaterialButton
                                    android:id="@+id/threeMonthsStock"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:backgroundTint="?attr/colorPrimary"
                                    android:gravity="center"
                                    android:stateListAnimator="@null"
                                    android:text="3M"
                                    android:textColor="?attr/color_positive"
                                    android:textSize="10sp"
                                    app:cornerRadius="15dp"
                                    app:layout_gravity="fill_horizontal"
                                    app:rippleColor="?attr/color_positive" />

                                <com.google.android.material.button.MaterialButton
                                    android:id="@+id/oneYearStock"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:backgroundTint="?attr/colorPrimary"
                                    android:gravity="center"
                                    android:stateListAnimator="@null"
                                    android:text="1Y"
                                    android:textColor="?attr/color_positive"
                                    android:textSize="10sp"
                                    app:cornerRadius="15dp"
                                    app:layout_gravity="fill_horizontal"
                                    app:rippleColor="?attr/color_positive" />

                            </LinearLayout>

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/orderLinear"
                        android:orientation="vertical"
                        app:layout_constraintTop_toBottomOf="@id/sparkCardStock">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingBottom="10dp"
                            android:paddingTop="20dp"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="?attr/colorLight"
                            android:textSize="25sp"
                            android:text="@string/statistics"/>

<!--                        <com.google.android.material.card.MaterialCardView-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="match_parent"-->
<!--                            android:backgroundTint="?attr/colorPrimary"-->
<!--                            android:clipChildren="true"-->
<!--                            android:elevation="0dp"-->
<!--                            app:cardCornerRadius="15dp"-->
<!--                            app:cardElevation="0dp"-->
<!--                            app:strokeWidth="1dp"-->
<!--                            app:contentPaddingLeft="20dp"-->
<!--                            app:contentPaddingBottom="10dp"-->
<!--                            app:contentPaddingTop="10dp"-->
<!--                            app:strokeColor="?attr/colorAccentTransparent"-->
<!--                            app:cardPreventCornerOverlap="false">-->

<!--                            <LinearLayout-->
<!--                                android:layout_width="match_parent"-->
<!--                                android:layout_height="match_parent"-->
<!--                                android:orientation="vertical">-->

<!--                            <androidx.appcompat.widget.AppCompatTextView-->
<!--                                android:layout_width="wrap_content"-->
<!--                                android:layout_height="wrap_content"-->
<!--                                android:textSize="14sp"-->
<!--                                android:text="Net Income"-->
<!--                                android:textColor="?attr/colorPrimaryLight"/>-->

<!--                            <androidx.appcompat.widget.AppCompatTextView-->
<!--                                android:layout_width="wrap_content"-->
<!--                                android:layout_height="wrap_content"-->
<!--                                android:textSize="16sp"-->
<!--                                android:text="$1,000,000"-->
<!--                                android:textColor="?attr/colorLight"-->
<!--                                android:layout_marginBottom="20dp"/>-->

<!--                            </LinearLayout>-->

<!--                        </com.google.android.material.card.MaterialCardView>-->

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingBottom="10dp"
                            android:paddingTop="20dp"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="?attr/colorLight"
                            android:textSize="25sp"
                            android:text="@string/orders"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/ordersStock"
                            android:paddingStart="-5dp"
                            android:paddingEnd="-5dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:paddingBottom="60dp"/>

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>